tests/Checker/everything/errors/23c.vc
int main() {
    for (;;) {}
    break;
    return 1;
}
